crates/nak-ir-proc/tests/compile_fail/srcs_two_fields.stderr
error: AsSlice: `TwoFields` has 2 separate fields of the same type (a, b). Merge them into a single array field to avoid unsafe from_raw_parts.
  --> tests/compile_fail/srcs_two_fields.rs:19:10
   |
19 | #[derive(SrcsAsSlice)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `SrcsAsSlice` (in Nightly builds, run with -Z macro-backtrace for more info)

error: AsSlice: multi-field as_mut_slice requires array field migration
  --> tests/compile_fail/srcs_two_fields.rs:19:10
   |
19 | #[derive(SrcsAsSlice)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `SrcsAsSlice` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/compile_fail/srcs_two_fields.rs:19:10
   |
19 | #[derive(SrcsAsSlice)]
   |          ^^^^^^^^^^^
   |          |
   |          expected `&[Src]`, found `()`
   |          implicitly returns `()` as its body has no tail or `return` expression
   |
   = note: expected reference `&[Src]`
              found unit type `()`
   = note: this error originates in the derive macro `SrcsAsSlice` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/compile_fail/srcs_two_fields.rs:19:10
   |
19 | #[derive(SrcsAsSlice)]
   |          ^^^^^^^^^^^
   |          |
   |          expected `&mut [Src]`, found `()`
   |          implicitly returns `()` as its body has no tail or `return` expression
   |
   = note: expected mutable reference `&mut [Src]`
                      found unit type `()`
   = note: this error originates in the derive macro `SrcsAsSlice` (in Nightly builds, run with -Z macro-backtrace for more info)
